5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4135/executions/1637_2447.log
== TEST (2019-04-09 11:38:42) 
-- CODE:
preco = float (input("Digite o valor do preco:"))
pagamento = float (input("Digite o valor do pagamento:"))
if (preco>pagamento):
	mensagem = "falta "+ preco-pagamento
else (pagamento>preco):
	mensagem = "troco de "+ pagamento-preco
-- ERROR:
File "XXXX", line 5
    else (pagamento>preco):
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 11:40:52) 
-- CODE:
preco = float (input("Digite o valor do preco:"))
pagamento = float (input("Digite o valor do pagamento:"))
if (preco>pagamento):
	mensagem = "falta "+ preco-pagamento
#else (pagamento>preco):
	mensagem = "troco de "+ pagamento-preco
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    mensagem = "falta "+ preco-pagamento
TypeError: must be str, not float
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 11:41:20) 
-- CODE:
preco = float (input("Digite o valor do preco:"))
pagamento = float (input("Digite o valor do pagamento:"))
if (preco>pagamento):
	mensagem = "falta "+ preco-pagamento
else:
	mensagem = "troco de "+ pagamento-preco
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    mensagem = "falta "+ preco-pagamento
TypeError: must be str, not float
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 11:42:04) 
-- CODE:
preco = float (input("Digite o valor do preco:"))
pagamento = float (input("Digite o valor do pagamento:"))
if (preco>pagamento):
	mensagem = "falta "+ preco-pagamento
else:
	mensagem = "troco de "+ pagamento-preco
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    mensagem = "falta "+ preco-pagamento
TypeError: must be str, not float
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 11:43:05) 
-- CODE:
preco = float (input("Digite o valor do preco:"))
pagamento = float (input("Digite o valor do pagamento:"))
if (preco>pagamento):
	mensagem = "falta "+ (preco-pagamento)
else:
	mensagem = "troco de "+ (pagamento-preco)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    mensagem = "falta "+ (preco-pagamento)
TypeError: must be str, not float
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 11:45:31) 
-- CODE:
preco = float (input("Digite o valor do preco:"))
pagamento = float (input("Digite o valor do pagamento:"))
if (preco>pagamento):
	print( "falta ", preco-pagamento)
else:
	print ("troco de ", pagamento-preco)
-- OUTPUT:
falta  26.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 11:45:55) 
-- CODE:
preco = float (input("Digite o valor do preco:"))
pagamento = float (input("Digite o valor do pagamento:"))
if (preco>pagamento):
	print( "Falta ", preco-pagamento)
else:
	print ("Troco de ", pagamento-preco)
-- EXECUTION TIME:
0.198614
-- TEST CASE 1:
---- input:
38.0
12.0
---- correct output:
Falta 26.0
---- user output:
Falta  26.0
-- TEST CASE 2:
---- input:
32.0
60.0
---- correct output:
Troco de 28.0
---- user output:
Troco de  28.0
-- TEST CASE 3:
---- input:
516.0
516.0
---- correct output:
Troco de 0.0
---- user output:
Troco de  0.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
